don’t use action groupoid notation yet

--- a/mo.tex
+++ b/mo.tex
@@ -437,7 +437,7 @@ Given $A$--comodules $M$ and $N$, their cotensor product is defined by the coequ
 Given a map $f \co A \to B$ of Hopf $k$--algebras, the induced adjunction $f^* \dashv f_*$ is given at the level of comodules by
 \begin{center}
 \begin{tikzcd}
-\CatOf{QCoh}_{\Spec k \mmod \Spec A} \arrow[shift left=0.2em]{r}{f^*} \arrow[-,double]{d} & \CatOf{QCoh}_{\Spec k \mmod \Spec B} \arrow[shift left=0.2em]{l}{f_*} \arrow[-,double]{d} \\
+\CatOf{QCoh}_{(\Spec k, \Spec A)} \arrow[shift left=0.2em]{r}{f^*} \arrow[-,double]{d} & \CatOf{QCoh}_{(\Spec k, \Spec B)} \arrow[shift left=0.2em]{l}{f_*} \arrow[-,double]{d} \\
 \CatOf{Comodules}_A \arrow[shift left=0.2em]{r}{M \mapsto M} & \CatOf{Comodules}_B \arrow[shift left=0.2em]{l}{N \cotensor_B A \mapsfrom N}.
 \qed
 \end{tikzcd}
