re-remove that bad \todo. again. merge errors @_@

--- a/intro.tex
+++ b/intro.tex
@@ -55,7 +55,7 @@ Me \arrow{r} \arrow{rrd} \arrow{rrrd} \arrow{rrrrd} & \cdots \arrow{r} & M\Spin 
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
 \begin{theorem}[Ochanine, Witten]
-There is a map of rings \[\sigma: M\Spin_*\todo{Is this $M\Spin_*(*)$?  On second thought, ignore this comment; I'm being silly.} \to \C(\!(q)\!).\]  Moreover, if $M$ is a Spin manifold such that twice its first Pontryagin class vanishes --- that is, if $M$ lifts to a $\String$--manifold --- then $\sigma(M)$ lands in the subring $MF \subseteq \Z\ps{q}$ of modular forms with integral coefficients. \qed
+There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if $M$ is a Spin manifold such that twice its first Pontryagin class vanishes --- that is, if $M$ lifts to a $\String$--manifold --- then $\sigma(M)$ lands in the subring $MF \subseteq \Z\ps{q}$ of modular forms with integral coefficients. \qed
 \end{theorem}
 
 \noindent However, neither party gave indication that their result should be valid ``in families'', and no theory of integration was produced.  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum $E$ such that $E_*(*)$ had something to do with modular forms.  Around the same time, Landweber, Ravenel, and Stong began studying ``elliptic cohomology'' for independent reasons; sometime much earlier, Morava had constructed an object ``$K^{\Tate}$'' associated to the Tate elliptic curve; and a decade later Ando, Hopkins, and Strickland put all these things together in the following theorem:
