do a little bit of repair on that bad Gm[n] vs Gm^(n) example. erick is probably still unhappy, but it’ll do for the moment

--- a/mo.tex
+++ b/mo.tex
@@ -207,12 +207,12 @@ The individual schemes $\mathbb A^{1, (n)}$ do not support group structures.  Af
 \end{example}
 
 \begin{example}
-Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes.  The reader is invited\todo{Never invite the reader to do anything.}\todo{Does this just follow that there is a common cofinal subsystem, i.e., when $n$ is a power of 2?}  to check that there is an isomorphism $\{\Gm[n]\} \cong \{\Gm^{(n)}\}$ of formal schemes over $\F_2$, and that the induced formal group scheme structure on the right-hand side cannot be written level-wise --- rather, it involves the entire ind-scheme.\todo{Someone was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
+Similarly, one can define the scheme $\Gm[n]$ of elements of unipotent order $n$: \[\Gm[n] = \Spec \frac{\F_2[x,y]}{(xy - 1, x^n - 1)} \subseteq \Gm.\]  These \emph{are} all group schemes, but there is a second filtration along the lines of the one considered above: \[\Gm^{(n)} = \Spec \frac{\F_2[x,y]}{(xy - 1, (x - 1)^n)}.\]  These schemes are only occasionally group schemes --- specifically, $\Gm^{(2^n)}$ is a group scheme, in which case $\Gm^{(2^n)} \cong \Gm[2^n]$ over $\F_2$.  This gives an ind-equivalence between these two subsystems, but $\{\Gm[2^n]\}$ is \emph{not} cofinal in $\{\Gm[n]\}$, and the equivalence does not extend across the larger system.\todo{Mauro was interested in the relationship of this to the punctured formal scheme $\F_p(\!(q)\!)$.}
 \end{example}
 
-%The reader invitation is as far as I can tell is either incoherent or impossible due to the condition that the maps making up formal schemes need to be infinitesimal thickenings.  I think that correcting it goes as follows: requiring the inverse system to be of infintesimal thickenings means that the only $m$ such that $\mathbb{G}_m[m]$ is an infinitesimal thickening of the identity are the $m$ of the form $p^n$ which makes the result ``obvious'' in some sense.  EK
+\todo{The reader invitation is as far as I can tell is either incoherent or impossible due to the condition that the maps making up formal schemes need to be infinitesimal thickenings.  I think that correcting it goes as follows: requiring the inverse system to be of infintesimal thickenings means that the only $m$ such that $\mathbb{G}_m[m]$ is an infinitesimal thickening of the identity are the $m$ of the form $p^n$ which makes the result ``obvious'' in some sense.  EK}
 
-%The notion of the punctured disk is also wonky in the category of formal schemes.  In particular, one has that $\mathrm{Spf}(\mathbb{F}_2[[t]])$ has only one point in the underlying topological space.  This is part of why formal schemes aren't just schemes where the structure sheaf is of topological rings instead of rings: the points correspond to open ideals.  The ``correct'' category to take generic fibers of formal schemes is adic spaces, but that is not a discussion that is worth going into.  EK
+\todo{The notion of the punctured disk is also wonky in the category of formal schemes.  In particular, one has that $\mathrm{Spf}(\mathbb{F}_2[[t]])$ has only one point in the underlying topological space.  This is part of why formal schemes aren't just schemes where the structure sheaf is of topological rings instead of rings: the points correspond to open ideals.  The ``correct'' category to take generic fibers of formal schemes is adic spaces, but that is not a discussion that is worth going into.  EK}
 
 Let's now consider the example that we closed with last time, where we calculated $H\F_2^*(\RP^n) = \F_2[x] / (x^{n+1})$.  Putting ``$\Spec$'' in front of this, we could reinterpret this calculation as \[\Spec H\F_2^*(\RP^n) \cong \mathbb A^{1, (n)}.\]  This is such a useful thing to do that we will give it a notation all of its own:
 
