--- a/mo.tex
+++ b/mo.tex
@@ -88,16 +88,42 @@ MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. & \text{(definition of $MO$)} & \ph
 \begin{theorem}[Thom isomorphism]
 Let $\xi\co X \to BO$ classify a vector bundle and let $\phi: MO \to E$ be a map of ring spectra. Then there is an equivalence of $E$--modules \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X.\]
 \end{theorem}
+
 \begin{proof}[Modifications to above proof]
-To accommodate $X$ rather than $BO$ as the base, we redefine $\sigma\co BO \times X \to BO \times X$ by \[\sigma(x, y) = \sigma(x \xi(y)^{-1}, y).\]  This gives an equivalence $MO \sm T(\xi) \simeq MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
+\todo{Added a little clarification, and gave what I think is a correct proof of the E case.  -Krishanu}
+To accommodate $X$ rather than $BO$ as the base, we redefine $\sigma\co BO \times X \to BO \times X$ by \[\sigma(x, y) = \sigma(x \xi(y)^{-1}, y).\]  Follow the same proof as before with the diagram
 \begin{center}
 \begin{tikzcd}
-E \sm T(\xi) \arrow[densely dotted]{r}{\simeq} \arrow{d}{\eta_{MO} \sm \id \sm \id} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
-MO \sm E \sm T(\xi) \arrow{r}{\simeq} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} & MO \sm E \sm \Susp^\infty_+ X \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} \\
-E \sm T(\xi) \arrow{r} & E \sm \Susp^\infty_+ X.
+BO \times X \arrow{r}{\sigma, \simeq} \arrow[bend right]{rrrd} & BO \times X \arrow{r}{\simeq, \xi}& BO \times BO \arrow{r}{\mu} \arrow{d}{J_{\R} \times J_{\R}} & BO \arrow{d}{J_{\R}} \\
+& & B\GL_1 \S \times B\GL_1 \S \arrow{r}{\mu} & B\GL_1 \S.
 \end{tikzcd}
 \end{center}
-The middle equivalence comes from the previous Thom isomorphism, smashed through with $E$.  The bottom arrow exists by applying the action map to both sides.  Reusing the bottom arrow at the top arrow and using the unitality of the monoid $E$ shows the map to be an equivalence. \todo{I'm a little confused here. Once we have the equivalence $MO \wedge T(\xi) \simeq MO \wedge \Sigma_+^\infty X$, why can't be apply $(\varphi, id)$ to this equivalence to obtain $E \wedge T(\xi) \simeq E \wedge \Sigma_+^\infty X$? -danny}\todo{The ``unitality'' shows that the vertical compositions are the identity, and then the top map is a retract of an equivalence, right?  (If we want to use a retraction property, do we need to show that the grid diagram commutes...?  Maybe we can check a weak equivalence condition instead by pushing around homotopy elements...)}
+This gives an equivalence $\theta_{MO}: MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
+\begin{center}
+\begin{tikzcd}
+E \sm T(\xi)  \arrow{d}{\eta_{MO} \sm \id \sm \id=f} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
+MO \sm E \sm T(\xi) \arrow{r}{\theta_{MO} \sm E} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id=g} & MO \sm E \sm \Susp^\infty_+ X\arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id=h} \\
+E \sm T(\xi) \arrow{r}{\theta_E} & E \sm \Susp^\infty_+ X
+\end{tikzcd}
+\end{center}
+The bottom arrow $\theta_E$ exists by applying the action map to both sides and pushing the map $\theta_{MO} \sm E$ down.  $\theta_{MO}$ is an equivalence, and so it has an inverse $\alpha_{MO}$ - therefore the middle map has inverse $\alpha_{MO} \sm E$ and we can similarly push this down to a map $\alpha_E$ which we want to show is the inverse to $\theta_E$.  From here it is a simple diagram chase - we have renamed three of the maps in the diagram to $f$, $g$, and $h$ for brevity.  Note that $g \circ f$ is the identity map because of the unit axiom.  Then
+
+\begin{align*}
+g\circ f &\simeq g \circ (\alpha_{MO}\sm E) \circ (\theta_{MO} \sm E) \circ f& \\
+& \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f & \text{(action map)}\\
+& \simeq \alpha_E \circ \theta_E \circ g \circ f & \text{(action map)}\\
+&\simeq \alpha_E \circ \theta_E & \qedhere
+\end{align*}
+%This gives an equivalence $\theta_{MO}: MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
+%\begin{center}
+%\begin{tikzcd}
+%E \sm T(\xi) \arrow[densely dotted]{r}{\simeq} \arrow{d}{\eta_{MO} \sm \id \sm \id} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
+%MO \sm E \sm T(\xi) \arrow{r}{\simeq} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} & MO \sm E \sm \Susp^\infty_+ X \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} \\
+%E \sm T(\xi) \arrow{r} & E \sm \Susp^\infty_+ X.
+%\end{tikzcd}
+%\end{center}
+%The middle equivalence comes from the previous Thom isomorphism, smashed through with $E$.  The bottom arrow exists by applying the action map to both sides.  Reusing the bottom arrow at the top arrow and using the unitality of the monoid $E$ shows the map to be an equivalence.
+\todo{I'm a little confused here. Once we have the equivalence $MO \wedge T(\xi) \simeq MO \wedge \Sigma_+^\infty X$, why can't be apply $(\varphi, id)$ to this equivalence to obtain $E \wedge T(\xi) \simeq E \wedge \Sigma_+^\infty X$? -danny}\todo{The ``unitality'' shows that the vertical compositions are the identity, and then the top map is a retract of an equivalence, right?  (If we want to use a retraction property, do we need to show that the grid diagram commutes...?  Maybe we can check a weak equivalence condition instead by pushing around homotopy elements...)}
 \end{proof}
 \todo{At least hint that there's a converse to this Theorem, to be explored later.}
 
