--- a/quillen.tex
+++ b/quillen.tex
@@ -22,17 +22,19 @@ The associated Thom spectrum is written ``$MU$'' and called \textit{complex bord
 \end{definition}
 
 \begin{theorem}\label{ThomIsomOverC}\citeme{Give a reference from Lecture 1.1}
-For a complex vector bundle $\xi$ on a space $X$ and a complex-oriented ring spectrum $E$, there is a natural equivalence \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X. \qed\]
+For a complex vector bundle $\xi$ on a space $X$ and a complex-oriented\todo{I don't remember discussing orientations in the last chapter (probably because it's not needed), but maybe you can say something about where the complex orientation is used in this theorem?} ring spectrum $E$, there is a natural equivalence \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X. \qed\]
 \end{theorem}
 
 \begin{corollary}\label{CPinftyNiceCalculation}\citeme{Give a reference from Lecture 1.1}
 In particular, for a complex-oriented ring spectrum $E$ it follows that $E^* \CP^\infty$ is isomorphic to a one--dimensional power series ring. \qed
 \end{corollary}
+\todo{Maybe I'm confused about grading issues, but I thought $E^* \C P^\infty$ was a polynomial ring and $EP^0 \C P^\infty$ is the power series ring?}
+\todo{Also, this is a nice argument.  Usually this computation proceeds through the AHSS.  Can this method be adapted to spaces other than $\C P^\infty$?}
 
 In light of these results, it seems prudent to develop some of the theory of formal schemes and formal varieties outside of the context of $\F_2$--algebras.
 
 \begin{definition}
-Fix a scheme $S$.  A formal $S$--scheme $X = \{X_\alpha\}_\alpha$ is an ind-system of Artinian $S$--schemes $X_\alpha$.
+Fix a scheme $S$.  A \textit{formal $S$--scheme} $X = \{X_\alpha\}_\alpha$ is an ind-system of Artinian\todo{Why Artinian? Also, you used to say finite instead of Artinian, so maybe you can standardize the terminology across chapters.} $S$--schemes $X_\alpha$.
 \end{definition}
 
 \begin{remark}
@@ -41,7 +43,7 @@ In the case $S = \Spec k$ for a field $k$, ``Artinian'' means that $\sheaf{O}_{X
 
 These ind-systems arise when studying completions of rings.  To address the geometric situation, we first owe ourselves a definition of a closed subscheme:
 \begin{definition}\label{DefnCompletion}
-Let $X$ be an affine formal scheme, and pick a chart $\Spec R \to X$.  A subscheme $Y \subseteq X$ is called \textit{closed} when it has the form
+Let $X$ be an affine formal scheme\todo{I'm guessing this means isomorphic to the constant ind-system $\{\Spec R\}$?}, and pick a chart $\Spec R \to X$.  A subscheme $Y \subseteq X$ is called \textit{closed} when it has the form
 \begin{center}
 \begin{tikzcd}
 Y \arrow{r} \arrow[-,double,densely dotted]{d} & X \arrow[-,double]{d} \\
@@ -49,17 +51,19 @@ Y \arrow{r} \arrow[-,double,densely dotted]{d} & X \arrow[-,double]{d} \\
 \end{tikzcd}
 \end{center}
 \end{definition}
+\todo{I don't understand your decorations for the vertical arrows.  Shouldn't they be arrows?  And why is the left one densely dotted?}
 
 There's a complementary notion of an open subscheme, which we will continue to avoid for now.  These definitions are both best stated in a coordinate--free way, but the open subscheme version really \emph{requires} it, so we will postpone it until later.\oweproof{Definition of open scheme}\oweproof{Definition of closed subscheme without chart}  For now, we will proceed with the geometry:
 
 \begin{definition}
 Consider such a closed subscheme $Y$ of an affine $S$--scheme $X$, modeled by a map $\Spec R/I \to \Spec R$.  We define the \textit{$n${\th} order neighborhood of $Y$ in $X$} to be the scheme $\Spec R/I^{n+1}$.  The \textit{formal neighborhood of $Y$ in $X$} is then the ind-system \[X^\wedge_Y := \left\{ \Spec R/I \to \Spec R/I^2 \to \Spec R/I^3 \to \cdots \right\}.\]
 \end{definition}
+\todo{I thought in class you said that $\sqrt{I}$ is maximal instead of $I$ is radical?}
 
 \noindent So, formal schemes arise naturally when studying the local geometry of $X$ near a subscheme $Y$.  An exceedingly common situation is for $X$ to be a variety and $Y$ to be a smooth point, so that $X^\wedge_Y$ looks like ``a small piece of affine space''.  We pin this important case down with a definition:
 
 \begin{definition}
-In the case that $S = \Spec R$ is affine, formal affine $n$--space over $S$ is defined by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  A \textit{formal affine variety} is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$ for some $n$.  The two maps in an isomorphism pair \[V \to \A^n, \quad V \leftarrow \A^n\] are called a \textit{coordinate (system)} and a \textit{parameter (system)} respectively.
+In the case that $S = \Spec R$ is affine, formal affine $n$--space over $S$ is defined by \[\A^n = \Spf R\llbracket x_1, \ldots, x_n\rrbracket.\]  \todo{I have very little intuition for $\Spf R$.  Could you define this more precisely, especially as an ind-system from the functors of points perspective?} A \textit{formal affine variety} is a formal scheme $V$ which is (noncanonically) isomorphic to $\A^n$ for some $n$.  The two maps in an isomorphism pair \[V \to \A^n, \quad V \leftarrow \A^n\] are called a \textit{coordinate (system)} and a \textit{parameter (system)} respectively.
 \end{definition}
 
 \begin{lemma}\label{MapsOfFVarsArePowerSeries}
@@ -73,7 +77,7 @@ In some sense, \Cref{MapsOfFVarsArePowerSeries} is a full explanation for why an
 \Cref{MapsOfFVarsArePowerSeries} shows how formal varieties are especially nice, because maps between them can be boiled down to statements about power series.  In particular, this allows theorems from analytic differential geometry to be imported, including a version of the inverse function theorem, which we will now work towards.
 
 \begin{definition}
-Let $V$ be a formal variety and let $I_V = \A^1(V)$ be the ideal of functions vanishing at the origin.  Then, we define the \textit{cotangent space of $V$} at the origin by \[T^* V = I_V / I_V^2.\]
+Let $V$ be a formal variety and let $I_V = \A^1(V)$ \todo{Strictly speaking, I don't think this notation has been introduced.} be the ideal of functions vanishing at the origin.  Then, we define the \textit{cotangent space of $V$} at the origin by \[T^* V = I_V / I_V^2.\]
 \end{definition}
 
 \begin{definition}
@@ -84,14 +88,14 @@ Similarly, a point $f \in V(R[t] / t^2)$ can be written as $f = f(0) + v(f) t$ w
 A map $f\co V \to W$ of finite--dimensional formal varieties is an isomorphism if and only if the induced map $Tf\co TV \to TW$ is an isomorphism of $R$--modules.
 \end{theorem}
 \begin{proof}
-First, reduce to the case where $V \cong \A^n$ and $W \cong \A^n$ have the same dimension, and select charts for both.  Then, $Tf$ is a matrix of dimension $n \times n$.  If $Tf$ fails to be invertible, we are done, and if it is invertible, we replace $f$ by $f \circ (Tf)^{-1}$ so that $Tf$ is the identity matrix.
+First, reduce to the case where $V \cong \A^n$ and $W \cong \A^n$ have the same dimension \todo{I don't know how you are defining $\Spf$, but there may be something to show here, since you're not actually ``reducing'' to the case but showing that it `is'' the case.}, and select charts for both.  Then, $Tf$ is a matrix of dimension $n \times n$.  If $Tf$ fails to be invertible, we are done, and if it is invertible, we replace $f$ by $f \circ (Tf)^{-1}$ so that $Tf$ is the identity matrix.
 
-We now construct the inverse function by induction on degree.  Set $g^{(1)}$ to be the identity function, so that $f$ and $g^{(1)}$ are mutual inverses when restricted to the first-order neighborhood.  So, suppose that $g^{(r-1)}$ has been constructed, and consider its interaction with $f$ on the $r${\th} order neighborhood: \[g_i^{(r-1)}(f(x)) = x_i + \sum_{|J| = r} c_J x_1^{J_1} \cdots x_n^{J_n} + o(r+1). \]  By adding in the correction term \[g_i^{(r)} = g_i^{(r-1)} - \sum_{|J| = R} c_J x_1^{J_1} \cdots x_n^{J_n},\] we have $g_i^{(r)}(f(x)) = x_i + o(r)$.
+We now construct the inverse function by induction on degree.  Set $g^{(1)}$ to be the identity function, so that $f$ and $g^{(1)}$ are mutual inverses when restricted to the first-order neighborhood.  So, suppose that $g^{(r-1)}$ has been constructed, and consider its interaction with $f$ on the $r${\th} order neighborhood: \[g_i^{(r-1)}(f(x)) = x_i + \sum_{|J| = r} c_J x_1^{J_1} \cdots x_n^{J_n} + o(r+1). \]  By adding in the correction term \[g_i^{(r)} = g_i^{(r-1)} - \sum_{|J| = r} c_J x_1^{J_1} \cdots x_n^{J_n},\] we have $g_i^{(r)}(f(x)) = x_i + o(r)$.
 \end{proof}
 
 We now return to our motivating example of $\CP^\infty_E$ for $E$ a complex-oriented cohomology theory, where we saw that the complex-orientation determines an isomorphism $\CP^\infty_E \cong \A^1$.  However, the object ``$E^* \CP^\infty$'' is something that exists independent of the orientation map $MU \to E$, and we now have the language to tease apart this situation:
 \begin{lemma}
-A cohomology theory $E$ is \textit{complex orientable} (i.e., it is able to receive a ring map from $MU$) precisely when $\CP^\infty_E$ is a formal curve.  A choice of map $MU \to E$ determines a coordinate $\CP^\infty_E \cong \A^1$. \qed
+A cohomology theory $E$ is \textit{complex orientable} (i.e., it is able to receive a ring map from $MU$) precisely when $\CP^\infty_E$ is a formal curve\todo{Is this just a formal variety of dimension 1?}.  A choice of map $MU \to E$ determines a coordinate $\CP^\infty_E \cong \A^1$. \qed
 \end{lemma}
 
 As we saw in the first case study, $\CP^\infty_E$ has more structure than just a formal scheme: it also carries the structure of a group.  We close today with some remarks about such objects.
@@ -122,7 +126,7 @@ Let $\G$ be a formal group.  In the presence of a coordinate $\phi \co \G \cong 
 \begin{tikzcd}
 \G \times \G \arrow{r} \arrow[-,double]{d} & \G \arrow[-,double]{d} \\
 \A^n \times \A^n \arrow{r} & \A^n,
-\end{tikzcd}
+\end{tikzcd} \todo{Again, the vertical arrows should be arrows, not equal signs?}
 \end{center}
 and hence a $n$-tuple of $(2n)$-variate power series ``$+_\phi$'', satisfying
 \begin{align*}
@@ -147,7 +151,7 @@ c(\L_1 \otimes \L_2) & = 1 - [\L_1 \otimes \L_2] = 1 - [\L_1] [\L_2] \\
 & = (1 - [\L_1]) + (1 - [\L_2]) - (1 - [\L_1])(1 - [\L_2]) \\
 & = c(\L_1) + c(\L_2) - c(\L_1) c(\L_2).
 \end{align*}
-In this coordinate on $\CP^\infty_{KU}$, the group law is then $x +_! y = x + y - xy$.
+In this coordinate on $\CP^\infty_{KU}$, the group law is then $x +_! y = x + y - xy$. \todo{Why is the notation $+_!$?}
 \end{example}
 
 We will close today by showing that the rational theory of formal groups is highly degenerate, similar to the rational theory of spectra.
@@ -167,9 +171,9 @@ The module $\Omega^1_{R/k}$ is universal for derivations into $R$--modules: \[\C
 
 These definitions are interesting in this level of generality, but suppose now that $k$ is a $\Q$--algebra and that $R = k\llbracket x \rrbracket$ is the coordinatized ring of functions on a formal line over $k$.  What's special about this rational curve case is that differentiation gives an isomorphism between $\Omega^1_{R/k}$ and the ideal $(x)$ of functions vanishing at the origin, i.e., the ideal sheaf selecting the closed subscheme $\Spec k \to \Spf R$.  Its inverse is formal integration: \[\int \co \left(\sum_{j=0}^\infty c_j x^j \right) dx \mapsto \sum_{j=0}^\infty \frac{c_j}{j+1} x^{j+1}.\]
 
-Taking a cue from classical Lie theory, we attempt to define exponential and logarithm functions for a given formal group law $F$.  \todo{We should show here that the submodule of invariant $1$--forms is equivalent to the module of tangent vectors.}This is typically accomplished by studying left--invariant differentials: a $1$--form $f(x) dx$ is said to be left--invariant under $F$ when \[f(x) dx = f(y +_F x) d(y +_F x) = f(y +_F x) \frac{\partial(y +_F x)}{\partial x} dx.\]  Restricting to the origin by setting $y = 0$, we deduce the condition \[f(0) = f(x) \cdot \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0}.\]  If $R$ is a $\Q$--algebra, then setting the boundary condition $f(0) = 1$ and integrating against $x$ yields \[\log_F(x) = \int \left( \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0} \right)^{-1} dx.\]  To see that the series $\log_F$ has the claimed homomorphism property, note that \[\frac{\partial \log_F(y +_F x)}{\partial x} = f(y +_F x) d(y +_F x) = f(x) dx = \frac{\partial \log_F(x)}{\partial x},\] so $\log_F(y +_F x)$ and $\log_F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_F(y)$, hence \[\log_F(x +_F y) = \log_F(x) + \log_F(y).\]  In all, this argument bundles into the following coordinate-free theorem:
+Taking a cue from classical Lie theory, we attempt to define exponential and logarithm functions for a given formal group law $F$.  \todo{We should show here that the submodule of invariant $1$--forms is equivalent to the module of tangent vectors.}This is typically accomplished by studying left--invariant differentials: a $1$--form $f(x) dx$ is said to be left--invariant under $F$ when \[f(x) dx = f(y +_F x) d(y +_F x) = f(y +_F x) \frac{\partial(y +_F x)}{\partial x} dx.\]  Restricting to the origin by setting $y = 0$, we deduce the condition \[f(0) = f(x) \cdot \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0}.\]  If $R$ is a $\Q$--algebra, then setting the boundary condition $f(0) = 1$ and integrating against $x$ yields \[\log_F(x) = \int f(x) \, dx = \int \left( \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0} \right)^{-1} dx.\]  To see that the series $\log_F$ has the claimed homomorphism property\todo{While the notation $\log$ is suggestive, I don't think you claimed anything yet at this point.}, note that \[\frac{\partial \log_F(y +_F x)}{\partial x} = f(y +_F x) d(y +_F x) = f(x) dx = \frac{\partial \log_F(x)}{\partial x},\] so $\log_F(y +_F x)$ and $\log_F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_F(y)$, hence \[\log_F(x +_F y) = \log_F(x) + \log_F(y).\]  In all, this argument bundles into the following coordinate-free theorem:
 \begin{theorem}\label{RationalFGLsHaveLogarithms}\todo{This feels like a bit of a jump.  ``$\otimes$'', for instance?}
-There is a unique isomorphism \[\G \xrightarrow{\log} \operatorname{Lie} \G \otimes \G_a. \qed\]
+There is a unique isomorphism \[\G \xrightarrow{\log} \operatorname{Lie} \G \otimes \G_a. \qed\] \todo{First you have  map $\G \otimes (\Omega^1)^F \to \G_a$, and then you move $(\Omega^1)^F$ to the right, changing it to $\operatorname{Lie} \G$.}
 \end{theorem}
 
 
